--- a/src/ttbot_controller/package.xml
+++ b/src/ttbot_controller/package.xml
@@ -21,7 +21,7 @@
   <depend>tf2</depend>
   <depend>tf2_ros</depend>
   <depend>tf2_geometry_msgs</depend>
-
+  <depend>ament_index_cpp</depend>
   
   <!-- dùng trong launch của package controller -->
   <exec_depend>ros2launch</exec_depend>
