--- a/src/ttbot_controller/config/ttbot_controllers.yaml
+++ b/src/ttbot_controller/config/ttbot_controllers.yaml
@@ -1,24 +1,15 @@
 controller_manager:
   ros__parameters:
-    update_rate: 1000  # Hz
+    update_rate: 1000  
     use_sim_time: true
-
-    # 1. Broadcaster xuất joint state
     joint_state_broadcaster:
       type: joint_state_broadcaster/JointStateBroadcaster
 
-    # 2. Controller lái (góc đánh lái)
     front_steering_position_controller:
       type: position_controllers/JointGroupPositionController
 
-    # 3. Controller bánh chủ động (vận tốc)
     rear_wheel_velocity_controller:
       type: velocity_controllers/JointGroupVelocityController
-
-
-# ===============================
-# Cấu hình chi tiết cho từng controller
-# ===============================
 
 front_steering_position_controller:
   ros__parameters:
