--- a/src/ttbot_localization/config/ekf_global.yaml
+++ b/src/ttbot_localization/config/ekf_global.yaml
@@ -1,16 +1,15 @@
-### Cấu hình cho Navsat Transform Node ###
 navsat_transform_node:
   ros__parameters:
     frequency: 30.0
+    #CHINH CAI NAY THEO VI TRI DIA LY
     magnetic_declination_radians: 0.0
     yaw_offset: 0.0
     zero_altitude: true
-    broadcast_cartesian_transform: true
+    broadcast_cartesian_transform: false
     publish_filtered_gps: true
-    use_odometry_yaw: false
-    wait_for_datum: false
+    use_odometry_yaw: false  
+    delay: 2.0
 
-### Cấu hình cho Global EKF Node ###
 ekf_global_node:
   ros__parameters:
     frequency: 30.0
@@ -22,7 +21,7 @@ ekf_global_node:
     base_link_frame: base_link
     world_frame: map
 
-    # 1. Odom từ Encoder (Ackermann Controller)
+
     odom0: /ackermann_controller/odom
     odom0_config: [false, false, false,
                    false, false, false,
@@ -32,7 +31,6 @@ ekf_global_node:
     odom0_differential: false
     odom0_queue_size: 10
 
-    # 2. IMU (Madgwick Filtered)
     imu0: /imu/data_filtered
     imu0_config: [false, false, false,
                   false, false, true,
@@ -43,7 +41,6 @@ ekf_global_node:
     imu0_queue_size: 10
     imu0_remove_gravitational_acceleration: true
 
-    # 3. GPS (Đã convert sang Odom bởi navsat_transform)
     odom1: /odometry/gps
     odom1_config: [true,  true,  false,
                    false, false, false,
@@ -53,9 +50,6 @@ ekf_global_node:
     odom1_differential: false
     odom1_queue_size: 10
 
-    # ----------------------------------------
-    # MA TRẬN HIỆP PHƯƠNG SAI (Đã sửa 0 thành 0.0)
-    # ----------------------------------------
     process_noise_covariance: [0.05, 0.0,  0.0,  0.0,  0.0,  0.0,  0.0,   0.0,   0.0,  0.0,  0.0,  0.0,  0.0,  0.0,  0.0,
                                0.0,  0.05, 0.0,  0.0,  0.0,  0.0,  0.0,   0.0,   0.0,  0.0,  0.0,  0.0,  0.0,  0.0,  0.0,
                                0.0,  0.0,  0.06, 0.0,  0.0,  0.0,  0.0,   0.0,   0.0,  0.0,  0.0,  0.0,  0.0,  0.0,  0.0,
