--- a/src/FAST_LIO/config/velodyne_sim.yaml
+++ b/src/FAST_LIO/config/velodyne_sim.yaml
@@ -43,6 +43,7 @@
             map_en: true                 # true: publish Map cloud
             dense_publish_en: true       # false: low down the points number in a global-frame point clouds scan.
             scan_bodyframe_pub_en: true  # true: output the point cloud scans in IMU-body-frame
+            publish_tf: false            # Đã thêm dòng tắt TF
 
         pcd_save:
             pcd_save_en: false
